# mcst_task

./: .gitignore
linters/: .clang-format
src/task0/: CMakeLists.txt  Makefile  README.md  main.c  parse_arg.c
src/task0/include/: error.h
src/task0/src/: main.c  parse_arg.c  thread_pool.c  vectior_v2_impl.h  vector_v2_algo.c  vector_v2_getters.c  vector_v2_io.c
src/task0/src/include/: error.h  parse_arg.h  stream.h  thread_pool.h  vector_v2.h
